--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "learntypecript",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/bot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc && nodemon .",
+    "start": "tsc && node ."
   },
   "keywords": [
     "typescript",
